NetBSD Problem Report #50709

From www@NetBSD.org  Tue Jan 26 08:49:10 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 1BE567ABC4
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 26 Jan 2016 08:49:10 +0000 (UTC)
Message-Id: <20160126084909.4DE587ACB5@mollari.NetBSD.org>
Date: Tue, 26 Jan 2016 08:49:09 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/dist/pf/sbin/pfctl/pfctl_optimize.c:905: (error) Memory leak: por
X-Send-Pr-Version: www-1.0

>Number:         50709
>Category:       bin
>Synopsis:       src/dist/pf/sbin/pfctl/pfctl_optimize.c:905: (error) Memory leak: por
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jan 26 08:50:00 +0000 2016
>Closed-Date:    Mon May 30 17:49:44 +0000 2016
>Last-Modified:  Mon May 30 17:49:44 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160125
>Organization:
>Environment:
>Description:
Source code is

        if (ioctl(pf->dev, DIOCGETRULE, &pr)) {
            warn("DIOCGETRULES");
            return (1);
        }

but

       if ((por = calloc(1, sizeof(*por))) == NULL) {

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50709 CVS commit: src/dist/pf/sbin/pfctl
Date: Mon, 30 May 2016 17:21:08 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Mon May 30 17:21:07 UTC 2016

 Modified Files:
 	src/dist/pf/sbin/pfctl: pfctl_optimize.c

 Log Message:
 PR 50709 David Binderman: memory leak


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/dist/pf/sbin/pfctl/pfctl_optimize.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 30 May 2016 17:49:44 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.