PR 50709 David Binderman: memory leak